# apps/api-server/src/modules/admin-users/interface/http/routes/admin-users.routes.ts
@@ -7,8 +7,10 @@ import { UpdateAdminUserUseCase } from "../../../application/use-cases/update-ad
 import { DeleteAdminUserUseCase } from "../../../application/use-cases/delete-admin-user.use-case";
 import { GetAdminUserUseCase } from "../../../application/use-cases/get-admin-user.use-case";
 import { BanAdminUserUseCase } from "../../../application/use-cases/ban-admin-user.use-case";
+import { CreateAdminUserUseCase } from "../../../application/use-cases/create-admin-user.use-case";
 import { AdminUsersController } from "../controllers/admin-users.controller";
 import { rateLimit } from "express-rate-limit";
+import { PasswordService } from "@/modules/identity/infrastructure/services/password.service";
 
 const repository = new AdminUsersRepository();
 const controller = new AdminUsersController(
@@ -17,6 +19,7 @@ const controller = new AdminUsersController(
   new DeleteAdminUserUseCase(repository),
   new GetAdminUserUseCase(repository),
   new BanAdminUserUseCase(repository),
+  new CreateAdminUserUseCase(repository, new PasswordService()),
 );
 
 const router = Router();
@@ -26,6 +29,20 @@ const adminMutationLimit = rateLimit({
   standardHeaders: true,
   legacyHeaders: false,
 });
+const adminCreateLimit = rateLimit({
+  windowMs: 60 * 60 * 1000,
+  max: 5,
+  standardHeaders: true,
+  legacyHeaders: false,
+});
+
+router.post(
+  "/",
+  requireAuth,
+  requirePermission(Permission.CREATE_ADMIN_USERS),
+  adminCreateLimit,
+  controller.create,
+);
 
 router.get(
   "/",
