# apps/api-server/src/modules/identity/application/use-cases/auth/login.use-case.ts
@@ -198,6 +198,7 @@ export class LoginUseCase {
       accessToken,
       refreshToken,
       expiresIn,
+      mustChangePassword: user.mustChangePassword,
     };
   }
 }
